# zvfelib

./: CMakeLists.txt
bulk_water_test/: test.input  whamcalc_binnedwham.txt  whamcalc_ubwhamhist.txt  whamcalc_ubwhamts.txt  zvfelib
bulk_water_test/test_traj/: indus9.input
bulk_water_test/test_traj/0/: confout.gro  ener.edr  plumed0.out  state.cpt  state_prev.cpt
bulk_water_test/test_traj/18/: confout.gro  ener.edr  plumed18.out  state.cpt  state_prev.cpt  topol.tpr
bulk_water_test/test_traj/27/: confout.gro  ener.edr  plumed27.out  state.cpt  state_prev.cpt
bulk_water_test/test_traj/36/: confout.gro  ener.edr  plumed36.out  state.cpt  state_prev.cpt
bulk_water_test/test_traj/45/: confout.gro  ener.edr  plumed45.out  state.cpt  state_prev.cpt  topol.tpr:Zone.Identifier
source/: CMakeLists.txt  main.cpp
source/analysis/: CMakeLists.txt  Dataset.cpp  Dataset.hpp  InputPack.hpp
source/analysis/biases/: Bias.hpp  BiasFactory.hpp  HarmonicBias.cpp  HarmonicBias.hpp
source/analysis/calculations/: BWHAM.cpp  BWHAM.hpp  Calculation.cpp  Calculation.hpp  CalculationFactory.hpp  UBWHAM.cpp  UBWHAM.hpp  make_histogram.hpp
source/analysis/generators/: Generator.cpp  Generator.hpp  GeneratorFactory.hpp  ListGenerator.cpp  ListGenerator.hpp  SubstitutionGenerator.hpp  UnionGenerator.hpp
source/filereaders/: CMakeLists.txt  OPFileReader.cpp  PLUMEDFileReader.cpp  filereader.hpp  timeseries.cpp  timeseries.hpp
source/filereaders/test/: CMakeLists.txt  FileReaderTest.cpp
source/filereaders/test/test_files/: sample_op.input
source/tools/: CMakeLists.txt
(+20 files in other folders)
